Added masks for separate validation points

--- a/newmask.ipynb
+++ b/newmask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ab0000d2",
    "metadata": {},
    "outputs": [],
@@ -27,18 +27,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "33c5b19a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = np.array(Image.open(\"test/b/mask.png\").convert(\"1\"))\n",
+    "mask = np.array(Image.open(\"train/1/mask.png\").convert(\"1\"))\n",
     "newmask=np.zeros_like(mask,dtype=bool)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
+   "id": "654de9b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rect = (1100, 3500, 700, 950)\n",
+    "\n",
+    "\n",
+    "\n",
+    "inside_rect = np.zeros(mask.shape, dtype=bool) * mask\n",
+    "inside_rect[rect[1]:rect[1]+rect[3]+1, rect[0]:rect[0]+rect[2]+1] = True\n",
+    "outside_rect = np.ones(mask.shape, dtype=bool) * mask\n",
+    "outside_rect[rect[1]:rect[1]+rect[3]+1, rect[0]:rect[0]+rect[2]+1] = False\n",
+    "pixels_inside_rect = np.argwhere(inside_rect)\n",
+    "pixels_outside_rect = np.argwhere(outside_rect)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8b2d59e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img=Image.fromarray(inside_rect)\n",
+    "img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "69afb84f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img1=Image.fromarray(outside_rect)\n",
+    "img1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "839e6107",
    "metadata": {},
    "outputs": [],
@@ -70,12 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "174f146c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img.save(\"newmask.png\")"
+    "img.save(\"mask_train_validation.png\")\n",
+    "img1.save(\"mask_test_validation.png\")"
    ]
   },
   {
@@ -89,9 +133,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cosmoflow]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cosmoflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -103,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
