Added validation during training. Added visualize class.

--- a/model_with_validation.ipynb
+++ b/model_with_validation.ipynb
@@ -67,11 +67,12 @@
    },
    "outputs": [],
    "source": [
-    "PREFIX = 'train/1/'\n",
+    "PREFIX = 'kaggle//input//vesuvius-challenge//train//1//' \n",
     "BUFFER = 30  # Buffer size in x and y direction\n",
-    "Z_START = 27 # First slice in the z direction to use\n",
-    "Z_DIM = 10   # Number of slices in the z direction\n",
-    "TRAINING_STEPS = 30000\n",
+    "Z_START = 16 # First slice in the z direction to use\n",
+    "Z_DIM = 32   # Number of slices in the z direction\n",
+    "TRAINING_EPOCHS = 30000\n",
+    "VALIDATION_EPOCHS= 500\n",
     "LEARNING_RATE = 0.03\n",
     "BATCH_SIZE = 32\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -95,47 +96,6 @@
     "        subvolume = self.image_stack[:, y-BUFFER:y+BUFFER+1, x-BUFFER:x+BUFFER+1].view(1, Z_DIM, BUFFER*2+1, BUFFER*2+1)\n",
     "        inklabel = self.label[y, x].view(1)\n",
     "        return subvolume, inklabel   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-04-26T21:12:57.538212Z",
-     "iopub.status.busy": "2023-04-26T21:12:57.537472Z",
-     "iopub.status.idle": "2023-04-26T21:12:57.549031Z",
-     "shell.execute_reply": "2023-04-26T21:12:57.547705Z",
-     "shell.execute_reply.started": "2023-04-26T21:12:57.538173Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All fragments: ['.ipynb_checkpoints', '1', '2', '3']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('train/1')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_path = Path(\"\")\n",
-    "train_path = base_path / \"train\"\n",
-    "all_fragments = sorted([f.name for f in train_path.iterdir()])\n",
-    "print(\"All fragments:\", all_fragments)\n",
-    "# Due to limited memory on Kaggle, we can only load 1 full fragment\n",
-    "train_fragments = [train_path / fragment_name for fragment_name in [\"1\"]]\n",
-    "train_fragments"
    ]
   },
   {
@@ -244,7 +204,9 @@
    ],
    "source": [
     "%%time\n",
-    "train_dset = SubvolumeDataset(image_stack,label, pixels_inside_rect)\n",
+    "train_dset = SubvolumeDataset(image_stack,label, pixels_outside_rect)\n",
+    "val_dset = SubvolumeDataset(image_stack, label, pixels_inside_rect)\n",
+    "\n",
     "print(\"Num items (pixels)\", len(train_dset))"
    ]
   },
@@ -254,21 +216,6 @@
    "source": [
     "#### Sanity check "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-03-12T05:05:30.666631Z",
-     "iopub.status.busy": "2023-03-12T05:05:30.665586Z",
-     "iopub.status.idle": "2023-03-12T05:05:33.617639Z",
-     "shell.execute_reply": "2023-03-12T05:05:33.61654Z",
-     "shell.execute_reply.started": "2023-03-12T05:05:30.666591Z"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -292,9 +239,46 @@
     }
    ],
    "source": [
-    "BATCH_SIZE = 32\n",
     "train_loader = data.DataLoader(train_dset, batch_size=BATCH_SIZE, shuffle=True)\n",
-    "print(\"Num batches:\", len(train_loader))"
+    "val_loader = data.DataLoader(val_dset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "print(\"Num of Training batches:\", len(train_loader))\n",
+    "print(\"Num of Training batches:\", len(val_loader))Visualization\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function allows us to keep track of loss, fbeta and accuracy.\n",
+    "# The method update needs to be called to calculate loss, fbeta and accuracy.\n",
+    "\n",
+    "class visualize:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        In here we initialize the values to 0\n",
+    "        \"\"\"\n",
+    "        self.fbeta=0\n",
+    "        self.loss=0\n",
+    "        self.accuracy=0\n",
+    "    def update(self, outputs, labels, loss):\n",
+    "        \"\"\"\n",
+    "        Takes outputs, labels and loss as input and updates the instance variables fbeta, accuracy and loss\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        pred_labels = outputs.detach().sigmoid().gt(0.4).int()\n",
+    "        accuracy = (pred_labels == labels).sum().float().div(labels.size(0))\n",
+    "        self.fbeta += fbeta_score(labels.view(-1).cpu().numpy(), pred_labels.view(-1).cpu().numpy(), beta=0.5)\n",
+    "        self.accuracy += accuracy.item()\n",
+    "        self.loss += loss.item()"
    ]
   },
   {
@@ -426,9 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "TRAINING_STEPS = 5000\n",
-    "LEARNING_RATE = 1e-3\n",
-    "TRAIN_RUN = False # To avoid re-running when saving the notebook"
+    "TRAIN_RUN = True # To avoid re-running when saving the notebook"
    ]
   },
   {
@@ -465,23 +447,25 @@
     "if TRAIN_RUN:\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "    optimizer = optim.SGD(model.parameters(), lr=LEARNING_RATE)\n",
-    "    scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=LEARNING_RATE, total_steps=TRAINING_STEPS)\n",
+    "    scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=LEARNING_RATE, total_steps=TRAINING_EPOCHS)\n",
     "    model.train()\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    # We will use these to visualize training\n",
+    "    train_visualize= visualize()\n",
+    "    val_visualize=visualize()\n",
     "    train_loss_plot=[] \n",
     "    train_accuracy_plot=[]\n",
     "    train_fbeta_plot=[]\n",
+    "    val_loss_plot=[] \n",
+    "    val_accuracy_plot=[]\n",
+    "    val_fbeta_plot=[]\n",
     "    \n",
-    "    #This is again the example code\n",
-    "    \n",
-    "    running_loss = 0.0\n",
-    "    running_accuracy = 0.0\n",
-    "    running_fbeta = 0.0\n",
     "    denom = 0\n",
-    "    pbar = tqdm(enumerate(train_loader), total=TRAINING_STEPS)\n",
+    "    pbar = tqdm(enumerate(train_loader), total=TRAINING_EPOCHS)\n",
     "    for i, (subvolumes, inklabels) in pbar:\n",
-    "        if i >= TRAINING_STEPS:\n",
+    "        if i >= TRAINING_EPOCHS:\n",
     "            break\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(subvolumes.to(DEVICE))\n",
@@ -489,26 +473,36 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        scheduler.step()\n",
-    "        pred_ink = outputs.detach().sigmoid().gt(0.4).int()\n",
-    "        accuracy = (pred_ink == inklabels).sum().float().div(inklabels.size(0))\n",
-    "        running_fbeta += fbeta_score(inklabels.view(-1).cpu().numpy(), pred_ink.view(-1).cpu().numpy(), beta=0.5)\n",
-    "        running_accuracy += accuracy.item()\n",
-    "        running_loss += loss.item()\n",
+    "        # Updates the training_loss, training_fbeta and training_accuracy\n",
+    "        train_visualize.update(outputs, inklabels, loss) \n",
     "        denom += 1\n",
-    "        pbar.set_postfix({\"Loss\": running_loss / denom, \"Accuracy\": running_accuracy / denom, \"Fbeta@0.5\": running_fbeta / denom})\n",
+    "        #pbar.set_postfix({\"Loss\": running_loss / denom, \"Accuracy\": running_accuracy / denom, \"Fbeta@0.5\": running_fbeta / denom})\n",
     "        if (i + 1) % 500 == 0:\n",
-    "            train_loss_plot.append(running_loss / denom) # Used for plotting training loss\n",
-    "            train_accuracy_plot.append(running_accuracy / denom) # Used for plotting training accuracy\n",
-    "            train_fbeta_plot.append(running_fbeta / denom) # Used for plotting training fbeta\n",
-    "            running_loss = 0.\n",
-    "            running_accuracy = 0.\n",
-    "            running_fbeta = 0.\n",
+    "            train_loss_plot.append(train_visualize.loss / denom) # Used for plotting training loss\n",
+    "            train_accuracy_plot.append(train_visualize.accuracy / denom) # Used for plotting training accuracy\n",
+    "            train_fbeta_plot.append(train_visualize.fbeta / denom) \n",
+    "            \n",
+    "            val_loss_plot.append(val_visualize.loss/VALIDATION_EPOCHS) # Used for plotting training loss\n",
+    "            val_accuracy_plot.append(val_visualize.accuracy/VALIDATION_EPOCHS) # Used for plotting training accuracy\n",
+    "            val_fbeta_plot.append(val_visualize.fbeta/VALIDATION_EPOCHS) # Used for plotting training fbeta\n",
+    "            \n",
+    "            train_visualize.loss=0\n",
+    "            train_visualize.fbeta=0\n",
+    "            train_visualize.accuracy=0\n",
     "            denom = 0\n",
-    "\n",
+    "            val_visualize.loss=0\n",
+    "            val_visualize.fbeta=0\n",
+    "            val_visualize.accuracy=0\n",
+    "            for j, (val_subvolumes, val_inklabels) in enumerate(val_loader):\n",
+    "                if j>= VALIDATION_EPOCHS:\n",
+    "                    break\n",
+    "                val_outputs= model(val_subvolumes.to(DEVICE))\n",
+    "                val_loss = criterion(val_outputs, val_inklabels.to(DEVICE))\n",
+    "                val_visualize.update(val_outputs, val_inklabels, val_loss) \n",
     "    torch.save(model.state_dict(), \"model1.pt\")\n",
     "\n",
     "else:\n",
-    "    model_weights = torch.load(\"model1.pt\")\n",
+    "    model_weights = torch.load(\"model.pt\")\n",
     "    model.load_state_dict(model_weights)"
    ]
   },
@@ -549,6 +543,38 @@
     "    plt.title(\"Training F-Beta\")\n",
     "    plt.savefig(\"train_fbeta_plot.png\", format=\"png\")\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if TRAIN_RUN:\n",
+    "    # Plotting the validation_loss vs epochs\n",
+    "    plt.plot(val_loss_plot)\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('validation loss')\n",
+    "    plt.title(\"Validation Loss\")\n",
+    "    plt.savefig(\"val_loss_plot.png\", format=\"png\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Plotting the validation accuracy\n",
+    "    plt.plot(val_accuracy_plot)\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('validation accuracy')\n",
+    "    plt.title(\"Validation Accuracy\")\n",
+    "    plt.savefig(\"val_accuracy_plot.png\", format=\"png\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Plotting the training fbeta@0.5\n",
+    "    plt.plot(val_fbeta_plot)\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('validation fbeta')\n",
+    "    plt.title(\"Validation F-Beta\")\n",
+    "    plt.savefig(\"val_fbeta_plot.png\", format=\"png\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -815,9 +841,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cosmoflow]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cosmoflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -829,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
