--- a/model_with_validation.ipynb
+++ b/model_with_validation.ipynb
@@ -905,9 +905,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cosmoflow]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cosmoflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -919,7 +919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
