--- a/model_all_fragments.ipynb
+++ b/model_all_fragments.ipynb
@@ -43,7 +43,9 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.utils.data as thd\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-01T03:10:57.418769Z",
@@ -246,40 +248,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All fragments: ['.ipynb_checkpoints', '1', '2', '3']\n"
+      "All fragments: ['1', '2', '3']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[PosixPath('train/1'), PosixPath('train/2'), PosixPath('train/3')]"
+       "[WindowsPath('G:/My Drive/MachineLearning/vesuvius/train/1')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_path = Path(\"\")\n",
+    "base_path = Path(\"G:\\\\My Drive\\\\MachineLearning\\\\vesuvius\")\n",
     "train_path = base_path / \"train\"\n",
     "all_fragments = sorted([f.name for f in train_path.iterdir()])\n",
     "print(\"All fragments:\", all_fragments)\n",
     "# Due to limited memory on Kaggle, we can only load 1 full fragment\n",
-    "train_fragments = [train_path / fragment_name for fragment_name in [\"1\",\"2\",\"3\"]]\n",
+    "train_fragments = [train_path / fragment_name for fragment_name in [\"1\"]]\n",
     "train_fragments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-01T03:11:00.726965Z",
@@ -300,52 +304,32 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/cosmoflow/lib/python3.8/site-packages/PIL/Image.py:2911: DecompressionBombWarning: Image size (140973980 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded fragment /home/kvasu2/home/train/1 on 2913043\n",
-      "Loaded fragment /home/kvasu2/home/train/2 on 2913043\n",
-      "Loaded fragment /home/kvasu2/home/train/3 on 2913043\n",
-      "Num items (pixels) 152172270\n",
-      "CPU times: user 14.1 s, sys: 5.35 s, total: 19.5 s\n",
-      "Wall time: 20.1 s\n"
+      "peak memory: 1151.74 MiB, increment: 939.64 MiB\n",
+      "Loaded fragment G:\\My Drive\\MachineLearning\\vesuvius\\train\\1 on 16520\n",
+      "peak memory: 5198.09 MiB, increment: 4806.57 MiB\n",
+      "Num items (pixels) 29135930\n",
+      "CPU times: total: 3.67 s\n",
+      "Wall time: 13.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "pixels = get_pixels_using_mask(train_fragments)\n",
-    "train_dset = SubvolumeDataset(fragments=train_fragments, voxel_shape=(48, 64, 64), filter_edge_pixels=True,pixels=pixels)\n",
+    "\n",
+    "%memit pixels = get_pixels_using_mask(train_fragments)\n",
+    "%memit train_dset = SubvolumeDataset(fragments=train_fragments, voxel_shape=(48, 64, 64), filter_edge_pixels=True,pixels=pixels)\n",
     "print(\"Num items (pixels)\", len(train_dset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(152172270, 3)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dset.pixels.shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -950,9 +934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cosmoflow]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cosmoflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -964,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
