--- a/all_fragments_validation.ipynb
+++ b/all_fragments_validation.ipynb
@@ -909,9 +909,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scrolls",
+   "display_name": "working",
    "language": "python",
-   "name": ".venv"
+   "name": "working"
   },
   "language_info": {
    "codemirror_mode": {
@@ -923,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
