--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -763,7 +763,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1049,7 +1048,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -10477,9 +10475,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (learn-torch)",
+   "display_name": "Python 3 (scrolls)",
    "language": "python",
-   "name": ".venv"
+   "name": "scrolls"
   },
   "language_info": {
    "codemirror_mode": {
