--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1683196",
+   "id": "d748c8e0",
    "metadata": {},
    "source": [
     "During the model training process, we discovered that certain layers were more crucial for ink detection than others. Specifically, the middle layers were found to be more relevant to the ink detection problem. As a result, we sought to investigate this phenomenon further through exploratory data analysis."
@@ -85,12 +85,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdfb51a",
+   "id": "d52b1857",
    "metadata": {},
    "source": [
-    "Our first strategy was to look at the graph of mean pixel values vs layers. We created these plots for all the three fragments. These plots are available at [Fragment 1 mean pixel values](mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](mean_pixel_value_frag_2.png) and [Fragment 3 mean pixel values](mean_pixel_value_frag_3.png). \n",
+    "# Mean pixel value plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bfeec44",
+   "metadata": {},
+   "source": [
+    "Our initial approach involved examining the relationship between mean pixel values and layers. We generated these plots for each of the three fragments, which can be accessed at [Fragment 1 mean pixel values](mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](mean_pixel_value_frag_2.png), and [Fragment 3 mean pixel values](mean_pixel_value_frag_3.png).\n",
     "\n",
-    "However, later a new mask was available. So we recreated these plots. The new plots are available at [Fragment 1 mean pixel values](new_mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](new_mean_pixel_value_frag_2.png) and [Fragment 3 mean pixel values](new_mean_pixel_value_frag_3.png)."
+    "Subsequently, when a new mask became available, we reproduced these plots. The updated versions are now accessible at [Fragment 1 mean pixel values](new_mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](new_mean_pixel_value_frag_2.png), and [Fragment 3 mean pixel values](new_mean_pixel_value_frag_3.png).\n",
+    "\n"
    ]
   },
   {
@@ -100,53 +109,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for j in range(1,4):\n",
-    "    i=0\n",
+    "# Loop over the fragments\n",
+    "for j in range(1, 4):\n",
+    "    i = 0\n",
+    "    \n",
+    "    # Perform garbage collection\n",
     "    collected = gc.collect()\n",
     "    print(\"Garbage collector: collected\",\n",
     "          \"%d objects.\" % collected)\n",
-    "    mask = np.array(Image.open(PREFIX+ str(j)+ \"//mask.png\").convert('1'))\n",
-    "    multiplier=(mask.shape[0]*mask.shape[1])/mask.sum()\n",
-    "    a=[]\n",
-    "    for filename in sorted(glob.glob(PREFIX+ str(j)+ \"//surface_volume/*.tif\")):\n",
+    "    \n",
+    "    # Read mask image\n",
+    "    mask = np.array(Image.open(PREFIX + str(j) + \"//mask.png\").convert('1'))\n",
+    "    multiplier = (mask.shape[0] * mask.shape[1]) / mask.sum()\n",
+    "    a = []\n",
+    "    \n",
+    "    # Loop over a sorted list of files\n",
+    "    for filename in sorted(glob.glob(PREFIX + str(j) + \"//surface_volume/*.tif\")):\n",
+    "        # Read image file and convert pixel values\n",
+    "        df = pd.DataFrame(np.array(Image.open(filename), dtype=np.float32) / 65535.0 * mask)\n",
     "        \n",
-    "        df=pd.DataFrame(np.array(Image.open(filename), dtype=np.float32)/65535.0 * mask)\n",
-    "        df_mean=df.mean()*multiplier\n",
-    "        a.append(df_mean.mean())        \n",
+    "        # Calculate mean pixel values\n",
+    "        df_mean = df.mean() * multiplier\n",
+    "        a.append(df_mean.mean())\n",
+    "        \n",
+    "    # Plot the data\n",
     "    plt.plot(np.array(a))\n",
-    "    plt.title(f\"Frag_{str(j)}:The mean pixel values vs layers\")\n",
+    "    plt.title(f\"Frag_{str(j)}: The mean pixel values vs layers\")\n",
     "    plt.xlabel(\"Layers\")\n",
     "    plt.ylabel(\"Mean pixel value\")\n",
+    "    \n",
+    "    # Save the plot to a file and display it\n",
     "    plt.savefig(f\"mean_pixel_value_frag_{str(j)}.png\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bc3b03d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for j in range(1,4):\n",
-    "    i=0\n",
-    "    collected = gc.collect()\n",
-    "    print(\"Garbage collector: collected\",\n",
-    "          \"%d objects.\" % collected)\n",
-    "    mask = np.array(Image.open(PREFIX+ str(j)+ \"//mask.png\").convert('1'))\n",
-    "    multiplier=(mask.shape[0]*mask.shape[1])/mask.sum()\n",
-    "    a=[]\n",
-    "    for filename in sorted(glob.glob(PREFIX+ str(j)+ \"//surface_volume/*.tif\")):\n",
-    "        \n",
-    "        df=pd.DataFrame(np.array(Image.open(filename), dtype=np.float32)/65535.0 * mask)\n",
-    "        df_mean=df.mean()*multiplier\n",
-    "        a.append(df_mean.mean())        \n",
-    "    plt.plot(np.array(a))\n",
-    "    plt.title(f\"Frag_{str(j)}:The mean pixel values vs layers\")\n",
-    "    plt.xlabel(\"Layers\")\n",
-    "    plt.ylabel(\"Mean pixel value\")\n",
-    "    plt.savefig(f\"mean_pixel_value_frag_{str(j)}.png\")\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
@@ -159,10 +153,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0eab525",
+   "id": "c07360b2",
    "metadata": {},
    "source": [
-    "Next we plotted the correlation of each layer vs the layer num. These plots are available at [Correlation plot frag 1](Correlation_value_frag_1.png),  [Correlation plot frag 2](Correlation_value_frag_2.png) and  [Correlation plot frag 3](Correlation_value_frag_3.png)."
+    "Finally, we graphed the correlation of each layer against its corresponding layer number. These visualizations can be found under [Correlation plot frag 1](Correlation_value_frag_1.png), [Correlation plot frag 2](Correlation_value_frag_2.png), and [Correlation plot frag 3](Correlation_value_frag_3.png).\n"
    ]
   },
   {
@@ -173,35 +167,56 @@
    "outputs": [],
    "source": [
     "from scipy import stats\n",
-    "for j in range(1,4):\n",
-    "    i=0\n",
+    "\n",
+    "# Loop over the fragments\n",
+    "for j in range(1, 4):\n",
+    "    i = 0\n",
+    "    \n",
+    "    # Perform garbage collection\n",
     "    collected = gc.collect()\n",
     "    print(\"Garbage collector: collected\",\n",
     "          \"%d objects.\" % collected)\n",
-    "    mask = np.array(Image.open(PREFIX+ str(j)+ \"//mask.png\").convert('1'))\n",
-    "    labels=(np.array(Image.open(PREFIX+ str(j)+ \"//inklabels.png\").convert('1'))).flatten()\n",
-    "    a=[]\n",
-    "    for filename in sorted(glob.glob(PREFIX+ str(j)+ \"//surface_volume/*.tif\")):\n",
+    "    \n",
+    "    # Read mask and labels images\n",
+    "    mask = np.array(Image.open(PREFIX + str(j) + \"//mask.png\").convert('1'))\n",
+    "    labels = (np.array(Image.open(PREFIX + str(j) + \"//inklabels.png\").convert('1'))).flatten()\n",
+    "    \n",
+    "    a = []\n",
+    "    \n",
+    "    # Loop over a sorted list of files\n",
+    "    for filename in sorted(glob.glob(PREFIX + str(j) + \"//surface_volume/*.tif\")):\n",
+    "        # Read image file and convert pixel values\n",
+    "        X = (np.array(Image.open(filename), dtype=np.float32) / 65535.0 * mask).flatten()\n",
     "        \n",
-    "        X=(np.array(Image.open(filename), dtype=np.float32)/65535.0 * mask).flatten()\n",
-    "        #print(stats.pearsonr(X,labels))\n",
-    "        a.append(stats.pearsonr(X,labels)[0])  \n",
-    "        #print(a)\n",
+    "        # Calculate Pearson correlation coefficient\n",
+    "        a.append(stats.pearsonr(X, labels)[0])\n",
+    "    \n",
+    "    # Plot the data\n",
     "    plt.plot(np.array(a))\n",
-    "    plt.title(f\"Frag_{str(j)}:Correlation vs layers\")\n",
+    "    plt.title(f\"Frag_{str(j)}: Correlation vs layers\")\n",
     "    plt.xlabel(\"Layers\")\n",
     "    plt.ylabel(\"Correlation\")\n",
+    "    \n",
+    "    # Save the plot to a file and display it\n",
     "    plt.savefig(f\"Correlation_value_frag_{str(j)}.png\")\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50de78a9",
+   "cell_type": "markdown",
+   "id": "bcc7d612",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e05347c",
+   "metadata": {},
+   "source": [
+    "These layers allow us to conclude that the middle layers are indeed responsible for most of the in"
+   ]
   }
  ],
  "metadata": {
