--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -96,9 +96,9 @@
    "id": "3bfeec44",
    "metadata": {},
    "source": [
-    "Our initial approach involved examining the relationship between mean pixel values and layers. We generated these plots for each of the three fragments, which can be accessed at [Fragment 1 mean pixel values](mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](mean_pixel_value_frag_2.png), and [Fragment 3 mean pixel values](mean_pixel_value_frag_3.png).\n",
+    "Our initial approach involved examining the relationship between mean pixel values and layers. We generated these plots for each of the three fragments, which can be accessed at [Fragment 1 mean pixel values](exploratory_plots/mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](exploratory_plots/mean_pixel_value_frag_2.png), and [Fragment 3 mean pixel values](exploratory_plots/mean_pixel_value_frag_3.png).\n",
     "\n",
-    "Subsequently, when a new mask became available, we reproduced these plots. The updated versions are now accessible at [Fragment 1 mean pixel values](new_mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](new_mean_pixel_value_frag_2.png), and [Fragment 3 mean pixel values](new_mean_pixel_value_frag_3.png).\n",
+    "Subsequently, when a new mask became available, we reproduced these plots. The updated versions are now accessible at [Fragment 1 mean pixel values](exploratory_plots/new_mean_pixel_value_frag_1.png), [Fragment 2 mean pixel values](exploratory_plots/new_mean_pixel_value_frag_2.png), and [Fragment 3 mean pixel values](exploratory_plots/new_mean_pixel_value_frag_3.png).\n",
     "\n"
    ]
   },
@@ -156,7 +156,7 @@
    "id": "c07360b2",
    "metadata": {},
    "source": [
-    "Finally, we graphed the correlation of each layer against its corresponding layer number. These visualizations can be found under [Correlation plot frag 1](Correlation_value_frag_1.png), [Correlation plot frag 2](Correlation_value_frag_2.png), and [Correlation plot frag 3](Correlation_value_frag_3.png).\n"
+    "Finally, we graphed the correlation of each layer against its corresponding layer number. These visualizations can be found under [Correlation plot frag 1](exploratory_plots/Correlation_value_frag_1.png), [Correlation plot frag 2](exploratory_plots/Correlation_value_frag_2.png), and [Correlation plot frag 3](exploratory_plots/Correlation_value_frag_3.png).\n"
    ]
   },
   {
